[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/exporters/Project/ExportProjectDialog.gd" type="Script" id=1]
[ext_resource path="res://src/exporters/Project/ProjectResultTextureRect.gd" type="Script" id=2]
[ext_resource path="res://assets/styles/subscribe_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/images/folder.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Save.svg" type="Texture" id=5]
[ext_resource path="res://src/nodes/AdvancedSpinBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/styles/ui_theme.tres" type="Theme" id=7]

[node name="ExportProjectDialog" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 76.0
margin_bottom = 120.0
rect_min_size = Vector2( 1100, 720 )
theme = ExtResource( 7 )
window_title = "Export project"
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1084.0
margin_bottom = 694.0
custom_constants/separation = 8

[node name="HBoxContainerTexture" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1068.0
margin_bottom = 31.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerTexture"]
margin_top = 6.0
margin_right = 66.0
margin_bottom = 25.0
text = "Exxport as"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainerTexture"]
margin_left = 70.0
margin_right = 320.0
margin_bottom = 31.0
rect_min_size = Vector2( 250, 0 )
text = "Texture (.png)"
items = [ "Texture (.png)", null, false, 0, null, "Godot 3 tileset (.tres + .png)", null, false, 1, null, "Mutiple textures (.png)", null, true, 2, null ]
selected = 0

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainerTexture"]
margin_left = 324.0
margin_right = 924.0
margin_bottom = 31.0
size_flags_horizontal = 3
editable = false

[node name="FileDialogButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerTexture"]
margin_left = 928.0
margin_right = 1068.0
margin_bottom = 31.0
rect_min_size = Vector2( 140, 0 )
text = "Texture path"
icon = ExtResource( 4 )

[node name="HBoxContainerGodot" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 1068.0
margin_bottom = 70.0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainerGodot"]
margin_right = 320.0
margin_bottom = 31.0
rect_min_size = Vector2( 320, 0 )

[node name="GodotPath" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainerGodot"]
margin_left = 324.0
margin_right = 924.0
margin_bottom = 31.0
size_flags_horizontal = 3
editable = false

[node name="GodotFileDialogButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerGodot"]
margin_left = 928.0
margin_right = 1068.0
margin_bottom = 31.0
rect_min_size = Vector2( 140, 0 )
text = "Tileset path"
icon = ExtResource( 4 )

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 1068.0
margin_bottom = 90.0

[node name="HBoxContainerMain" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 1068.0
margin_bottom = 618.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainerMain"]
margin_right = 220.0
margin_bottom = 520.0
rect_min_size = Vector2( 220, 0 )

[node name="VBoxSettings" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainerMain/ScrollContainer"]
margin_right = 220.0
margin_bottom = 141.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerMain/ScrollContainer/VBoxSettings"]
margin_right = 220.0
margin_bottom = 19.0
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainerMain/ScrollContainer/VBoxSettings"]
margin_top = 29.0
margin_right = 220.0
margin_bottom = 41.0

[node name="HBoxContainerTileSeparation" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainerMain/ScrollContainer/VBoxSettings"]
margin_top = 51.0
margin_right = 220.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerMain/ScrollContainer/VBoxSettings/HBoxContainerTileSeparation"]
margin_top = 5.0
margin_right = 77.0
margin_bottom = 24.0
text = "Tile spacing"

[node name="SeparationSpinBox" parent="MarginContainer/VBoxContainer/HBoxContainerMain/ScrollContainer/VBoxSettings/HBoxContainerTileSeparation" instance=ExtResource( 6 )]
margin_left = 89.0
margin_right = 220.0
margin_bottom = 29.0
min_value = 0.0
value = 0.0

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainerMain/ScrollContainer/VBoxSettings"]
margin_top = 90.0
margin_right = 220.0
margin_bottom = 102.0

[node name="LabelTiles" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerMain/ScrollContainer/VBoxSettings"]
margin_top = 112.0
margin_right = 220.0
margin_bottom = 131.0
text = "Tiles:"

[node name="VBoxContainerTiles" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainerMain/ScrollContainer/VBoxSettings"]
margin_top = 141.0
margin_right = 220.0
margin_bottom = 141.0

[node name="ProjectResultTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainerMain"]
margin_left = 224.0
margin_right = 1068.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
script = ExtResource( 2 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerMain/ProjectResultTextureRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 15.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 626.0
margin_right = 1068.0
margin_bottom = 638.0
custom_constants/separation = 12

[node name="HBoxContainerBottom" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 646.0
margin_right = 1068.0
margin_bottom = 678.0
custom_constants/separation = 8
alignment = 2

[node name="ButtonCancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerBottom"]
margin_left = 860.0
margin_right = 960.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 0 )
text = "Cancel"

[node name="ButtonOk" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerBottom"]
margin_left = 968.0
margin_right = 1068.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
text = "Save"
icon = ExtResource( 5 )

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0

[node name="TextureFileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 900, 600 )
popup_exclusive = true
window_title = "Choose export texture"
access = 2
filters = PoolStringArray( "*.png ; PNG Images" )

[node name="Godot3FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 900, 600 )
popup_exclusive = true
access = 2
filters = PoolStringArray( "*.tres ; Godot3 resources" )

[connection signal="about_to_show" from="." to="." method="_on_ExportProjectDialog_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_ExportProjectDialog_popup_hide"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainerTexture/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainerTexture/FileDialogButton" to="." method="_on_FileDialogButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainerGodot/GodotFileDialogButton" to="." method="_on_GodotFileDialogButton_pressed"]
[connection signal="value_changed_no_silence" from="MarginContainer/VBoxContainer/HBoxContainerMain/ScrollContainer/VBoxSettings/HBoxContainerTileSeparation/SeparationSpinBox" to="." method="_on_SeparationSpinBox_value_changed_no_silence"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainerBottom/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainerBottom/ButtonOk" to="." method="_on_ButtonOk_pressed"]
[connection signal="file_selected" from="TextureFileDialog" to="." method="_on_TextureFileDialog_file_selected"]
[connection signal="file_selected" from="Godot3FileDialog" to="." method="_on_Godot3FileDialog_file_selected"]
